<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam.jdi</groupId>
    <version>1.1.8</version>
    <artifactId>jdi-dark-tests</artifactId>
    <name>JDI Dark Tests</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <allure.testng>2.7.0</allure.testng>
        <allure.maven>2.10.0</allure.maven>
        <aspectj.version>1.9.5</aspectj.version>
        <suiteXML.file>general.xml</suiteXML.file>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.wealdtech.hawk</groupId>
            <artifactId>hawk-core</artifactId>
            <version>1.2.3</version>
        </dependency>
        <dependency>
            <groupId>com.epam.jdi</groupId>
            <artifactId>jdi-dark</artifactId>
            <version>1.1.8</version>
        </dependency>
        <dependency>
            <groupId>com.epam.jdi</groupId>
            <artifactId>jdi-dark-ws</artifactId>
            <version>1.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.11.0</version>
        </dependency>
        <!--Allure config in parent-->
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure.testng}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-webapp</artifactId>
            <version>9.4.26.v20200117</version>
        </dependency>
        <dependency>
            <groupId>io.rest-assured.examples</groupId>
            <artifactId>scalatra-webapp</artifactId>
            <version>3.0.2</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>1.8</version>
        </dependency>
        <dependency>
            <groupId>org.littleshoot</groupId>
            <artifactId>littleproxy</artifactId>
            <version>1.1.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.15.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                    <!-- Used to copy the foo bar war to the webapps folder -->
                    <id>copy-dependency</id>
                    <phase>process-resources</phase>
                    <goals>
                        <goal>copy</goal>
                    </goals>
                    <configuration>
                        <artifactItems>
                            <artifactItem>
                                <groupId>io.rest-assured.examples</groupId>
                                <artifactId>scalatra-webapp</artifactId>
                                <version>3.0.2</version>
                                <type>war</type>
                                <overWrite>true</overWrite>
                                <outputDirectory>${project.build.directory}/webapps</outputDirectory>
                                <destFileName>scalatra-webapp.war</destFileName>
                            </artifactItem>
                        </artifactItems>
                    </configuration>
                </execution>
                    <execution>
                        <id>copy-rest-service</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>com.epam.jdi</groupId>
                                    <artifactId>jdi-dark-rest-service</artifactId>
                                    <version>1.0.0</version>
                                    <type>jar</type>
                                    <overWrite>true</overWrite>
                                    <outputDirectory>${project.build.directory}/rest-service</outputDirectory>
                                    <destFileName>jdi-dark-rest-service.jar</destFileName>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <systemPropertyVariables>
                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                    </systemPropertyVariables>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/${suiteXML.file}</suiteXmlFile>
                    </suiteXmlFiles>
                    <testFailureIgnore>true</testFailureIgnore>
                    <argLine>
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure.maven}</version>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <id>copy-allure-environment</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/allure-results</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/test/resources/</directory>
                                    <includes>
                                        <include>environment.properties</include>
                                    </includes>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>
    </build>

    <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>LATEST</version>
                <configuration>
                    <properties>
                        <allure.results.directory>target/allure-results</allure.results.directory>
                    </properties>
                    <properties>
                        <allure.link.issue.pattern>https://example.org/issue/{}</allure.link.issue.pattern>
                    </properties>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <profiles>
        <profile>
            <id>info</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <domain>local=http://localhost:8080, trello=https://api.trello.com/1, google=https://google.com</domain>
                <log.level>INFO</log.level>
            </properties>
        </profile>
        <profile>
            <id>debug</id>
            <properties>
                <domain>local=http://localhost:8080, trello=https://api.trello.com/1, google=https://google.com</domain>
                <log.level>DEBUG</log.level>
            </properties>
        </profile>
    </profiles>
</project>